--- a/style.css
+++ b/style.css
@@ -12,16 +12,26 @@ absolute forces it to be there, even if it overlaps
 relative will fit it in around whatever is already there
 */
 
-
 body {
   
   min-height: 100%;
   margin:0;
   clear: both;
+  padding-bottom: 140px;
 }
 
-
-
+#footer {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width:100%;
+  margin-top: -120px;
+  height: 120px;
+  background: rgb(247, 244, 242);
+  text-align: center;
+  overflow: hidden;
+}
 
 /* Add a background color to the top navigation */
 .topnav {
@@ -60,9 +70,6 @@ body {
    line-height: 2em;
   }
 
-
-  
-  
   /* Add a color to the active/current link */
   .topnav a.active {
     text-decoration: underline;
@@ -77,75 +84,155 @@ body {
   position: fixed;
 }
 
+#slideshow-section {
+  width: 75%;
+  float : right;
+}
 
+#leftside-section {
+  width : 25%;
+  float : left;
+  position : relative;
+}
 
+#introText {
+  font-family: 'Roboto', sans-serif;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 45px;
+  padding-bottom: 45px;
+  background-color:rgb(186, 194, 111) ;
+}
 
-#footer {
-   position: absolute;
-   right: 0;
-   bottom: 0;
-   left: 0;
-   width:100%;
-   background: rgb(247, 244, 242);
-   text-align: center;
-   overflow: hidden;
+#introDiv {
+  padding-top: 65px;
+}
+
+#flower {
+  max-height: 250px;
+  padding-left: 15px;
+  position: absolute;
+  bottom: -200px;
+  
+}
+
+#contactText {
+  padding-left: 45px;
+  padding-right: 45px;
+  padding-top: 15px;
 }
 
 
-#boxes {
-  display: block;
-    position: relative;
+* {box-sizing:border-box}
+
+/* Slideshow container ------------------------------------------------------------------*/
+.slideshow-container {
+  max-width: 500px;
+  position: relative;
+  margin: auto;
 }
 
-
-
-#firstbox{
-    display: block;
-    position: relative;
+/* Hide the images by default */
+.mySlides {
+  display: none;
 }
 
-
-#flower{
-    float:left; 
-    margin:40px;
-    height: 20vw;
-    padding-left: 5vw;
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
 }
 
-
-#firstboxtextbackground {
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    background-color: #aa73a5;
-    right: 0; 
-    width: 80vw; 
-    padding-top: 9vw;
-    padding-bottom: 9vw;
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
 }
 
-
-#firstboxtext {
-    text-align: center;
-    color: white;
-    font-size: xx-large;
-    padding-left: 100px;
+/* On hover, add a black background color with a little bit see-through */
+* {
+  box-sizing: border-box;
 }
 
-#secondbox {
-  clear:both; /* Use this to get things to not overlap but go below instead */
-    
+img {
+  vertical-align: middle;
 }
 
-#secondboxtext {
+/* Position the image container (needed to position the left and right arrows) */
+.container {
+  position: relative;
+}
+
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
+
+/* Add a pointer when hovering over the thumbnail images */
+.cursor {
+  cursor: pointer;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 40%;
+  width: auto;
+  padding: 16px;
+  margin-top: -50px;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+  -webkit-user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* Container for image text */
+.caption-container {
   text-align: center;
-    color: black;
-    font-size: xx-large;
-    padding-left: 100px;
+  background-color: #222;
+  padding: 2px 16px;
+  color: white;
 }
 
-
-#details {
-  color: #aa73a5;
-  font-size: xx-large;
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
 }
+
+/* End of Slideshow ------------------------------- */
