--- a/style.css
+++ b/style.css
@@ -76,12 +76,20 @@ body {
   }
 
 #bannerLogo {
-  padding: 5px;
-  padding-top: 15px;
-  padding-left: 10px;
   width: 50px;
-  display: inline-block;
-  position: fixed;
+}
+
+.logo-image{
+  padding-top: 15px;
+}
+
+.row {
+  display:flex;
+}
+
+.column {
+  flex:33.33%;
+  padding:5px;
 }
 
 #slideshow-section {
