--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
   bottom: 0;
   left: 0;
   width:100%;
-  margin-top: -120px;
-  height: 120px;
+  margin-top: -110px;
+  height: 110px;
   background: rgb(247, 244, 242);
   text-align: center;
   overflow: hidden;
@@ -47,7 +47,8 @@ body {
     padding: 14px 16px; 
     text-decoration: none;
     
-    font-family: 'Lora', serif;
+    /* font-family: 'Lora', serif; */
+    font-family: 'Roboto', sans-serif;
     
   }
   
@@ -93,7 +94,9 @@ body {
 }
 
 #slideshow-section {
-  width: 75%;
+  
+  width: 70%;
+  background-size: contain;
   float : right;
 }
 
@@ -114,20 +117,14 @@ body {
 
 #introDiv {
   padding-top: 65px;
+  padding-left: 65px;
+  padding-right: 65px;
 }
 
 #flower {
   max-height: 250px;
   padding-left: 15px;
-  position: absolute;
-  bottom: -200px;
   
-}
-
-#contactText {
-  padding-left: 45px;
-  padding-right: 45px;
-  padding-top: 15px;
 }
 
 
